# ElectricEye

./: .bandit  .coverage  .env.example  .flake8  .pre-commit-config.yaml  Makefile  README.md  crewai_tool_compat.py  db.sqlite3  fixes.txt  jules-django-setup.py  lint_fixer.py  mypy.ini  prompt-5-reflection.md  pyproject.toml  pytest.ini  reflection_prompt_0.md  reflection_prompt_1.md  reflection_prompt_2.md  reflection_prompt_3.md  reflection_prompt_4.md  requirements-dev.txt  requirements.txt
.github/workflows/: adr-check.yml  sourcery.yml  tests.yml
agents/: agents.py  crews.py  models.py  serializers.py  tests.py  views.py
agents/migrations/: 0001_initial.py
billing/: models.py  webhooks.py
billing/migrations/: 0001_initial.py
config/: celery.py  settings.py  settings_test.py  urls.py
core/: schemas.py  serializers.py
docs/: AGENTS.md  Agentic-Django-Plan.md  PRD.template.md  manifest.yaml  reference-sources.json  traceability.md
docs/adr/: 0000-template.md
dport/: core_functionality.md  core_functionality_extraction_plan.md
eeauditor/: cloud_utils.py  controller.py  eeauditor.py
jobs/: apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  views.py
scans/: models.py  serializers.py  services.py  tasks.py  tests.py  views.py
scripts/: adr_add.py  enforce_all.py  jules_apply_pack.sh  jules_cleanup.sh  jules_preamble.sh  jules_sync_docs.py  prod_guard.py  restore_docs.py  verify_manifest.py
support/: serializers.py  services.py  views.py
tests/: conftest.py  test_greeting_job_e2e.py  test_healthz.py
(+92 files in other folders)
